--- a/SitesToClassroomNotUWP/SitesToClassroomNotUWP.csproj
+++ b/SitesToClassroomNotUWP/SitesToClassroomNotUWP.csproj
@@ -25,7 +25,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>2</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -107,7 +107,7 @@
     <Compile Include="ClassroomWindow.xaml.cs">
       <DependentUpon>ClassroomWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Classroom\GoogleClassroom.cs" />
+    <Compile Include="Classroom\GoogleClassroomManager.cs" />
     <Compile Include="LogWindow.xaml.cs">
       <DependentUpon>LogWindow.xaml</DependentUpon>
     </Compile>
